# project-m

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mstar/: main.py
src/mstar/config/logs/: default.yaml
src/mstar/config/pipelines/: default.yaml
src/mstar/core/: cache.py  graph.py  logger.py  utils.py
src/mstar/pipelines/: answer_comparison.py  build_graph.py  dynamic_questions.py  lightrag_ti.py  ner.py  process_dirs.py  query_answer_ti.py  summarization.py
src/mstar/prompts/: describe_table.txt  ner.txt  query_ner.txt  question_generation.txt  resolve_unknown_entity.txt  summarization.txt
src/mstar/schemas/: llm_schemas.py
